@@ -1,11 +1,12 @@
 h1. CHANGELOG
 
-h2. 2.2.17 unreleased
+h2. 2.2.17 October 27, 2012
 
 * add '-t' flag to substitute local templates (contributed by Clinton N. Dreisbach)
 * add '-L' flag to clear the default recipes so only local recipes are available (contributed by Clinton N. Dreisbach)
 * fix 'testing' recipe when Fabrication is selected without Cucumber (contributed by Christopher Garvis)
 * update gem 'zurb-foundation' from 3.1.1 to 3.2.0
+* improve 'saas' recipe to add RSpec tests
 
 h2. 2.2.16 October 24, 2012
 
